(css) (ui) (lic)
fixes #10

- add/edit custom CSS styles via ☰ → ⚙️ → ✏️ Custom Styles with presets and live editor (android + desktop); e.g try `Compact view` on Android
- tap dictionary title in ☰ dictionary panel to select it for search
- embed info on 3rd party licenses: `THIRD-PARTY-NOTICES.md`
